+ add special padding for project specific links to avoid any overlapping

--- a/jekyll/_sass/gamefolio/_project-page.scss
+++ b/jekyll/_sass/gamefolio/_project-page.scss
@@ -72,6 +72,9 @@
 	li {
 		display: inline-block;
 	}
+	li + li {
+		padding-left: 8px;
+	}
 }
 
 /* main article */
